[package]
name = "netfluff"
version = "0.1.0"
authors = ["VersBinarii <versbinarii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg = "2.1.0"
toml = "0.5"
notify-rust = "4.0.0-beta.3"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
